# crypto_track

./: Cargo.toml  TODO.md
client/: Cargo.toml
client/src/: main.rs
generate_asset_pairs/: Cargo.toml
generate_asset_pairs/src/: main.rs
kraken/: Cargo.toml
kraken/src/: core.rs  cryptocurrency.rs  currency.rs  lib.rs
kraken/src/message/: mod.rs  publication.rs  request.rs  response.rs
kraken/src/rest_api/: request.rs  response.rs
