[package]
name = "client"
version = "0.1.0"
authors = ["nward"]
edition = "2018"

[dependencies]
tokio-tungstenite = { version = "0.11.0", features = ["tls"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "full"] }
futures-util = "0.3.7"
serde_json = "1.0.59"
kraken = { path = "../kraken" }
failure = "0.1.8"
chrono = "0.4.19"
reqwest = "0.10.8"